# pydantic-requests

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  example.py  pyproject.toml
.github/workflows/: pythonpackage.yml
pydantic_requests/: __init__.py
tests/: test_json.py
